# fastapi_task

./: README.md  pyproject.toml
src/: main.py
src/controllers/: user_serviecs.py
src/core/: config.py
src/database/: connect.py
src/schemas/: models.py  schema.py
src/views/: home.py  user.py
